Corrections on Header & Collapse components

--- a/src/styles/components/_Banner.scss
+++ b/src/styles/components/_Banner.scss
@@ -1,4 +1,4 @@
-.banner_container1 {
+.banner_container-home {
     max-width: 1440px;
     position: relative;
     height: 180px;
@@ -29,7 +29,7 @@
     }
 }
 
-.banner_container6 {
+.banner_container-about {
     position: relative;
     height: 200px;
     margin: 30px 60px 20px;
@@ -60,7 +60,7 @@
 
 // --- Breakpoint 992px ---
 @media (max-width: 992px) {
-    .banner_container1 {
+    .banner_container-home {
         height: 165px;
         margin: 30px;
         &::before {
@@ -70,7 +70,7 @@
             font-size: 2rem;
         }
     }
-    .banner_container29 {
+    .banner_container-about {
         height: 220px;
         margin: 30px;
         &::before {
@@ -81,7 +81,7 @@
 
 // --- Breakpoint 768px ---
 @media (max-width: 768px) {
-    .banner_container1 {
+    .banner_container-home {
         height: 150px;
         margin: 20px;
         &::before {
@@ -91,7 +91,7 @@
             font-size: 1.8rem;
         }
     }
-    .banner_container6 {
+    .banner_container-about {
         height: 250px;
         margin: 20px;
         &::before {
@@ -102,7 +102,7 @@
 
 // --- Breakpoint 576px ---
 @media (max-width: 576px) {
-    .banner_container1 {
+    .banner_container-home {
         height: 110px;
         margin: 15px;
         display: flex;
@@ -119,7 +119,7 @@
             flex-direction: column;
         }
     }
-    .banner_container6 {
+    .banner_container-about {
         height: 265px;
         margin: 15px;
         &::before {
