--- a/src/styles/components/_Collapse.scss
+++ b/src/styles/components/_Collapse.scss
@@ -37,7 +37,7 @@
     }
 }
 
-.collapse_boxlodging {
+.collapse_box-lodging {
     margin: 30px 60px;
     display: flex;
     justify-content: space-between;
@@ -90,7 +90,7 @@
             font-size: 1.2rem;
         }
     }
-    .collapse_boxlodging {
+    .collapse_box-lodging {
         margin: 30px;
         flex-direction: column;
         .collapse_container {
@@ -105,7 +105,7 @@
     .collapse_box {
         margin: 30px 20px ;
     }
-    .collapse_boxlodging {
+    .collapse_box-lodging {
         margin: 10px 20px ;
     }
 }
@@ -118,7 +118,7 @@
             font-size: 1.1rem;
         }
     }
-    .collapse_boxlodging {
+    .collapse_box-lodging {
         margin: 10px 15px;
         .collapse_container {
             font-size: 1.1rem;
